JUnit tests run now in JPMS, fixed unintended reflection isnpection on java.base classes.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>